# IIR-Filters

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  pyproject.toml
.github/workflows/: test.yml
examples/imgui_demo/: CMakeLists.txt  app.cpp  app.hpp  bilinear_transform.cpp  bilinear_transform.hpp  filter_designer.cpp  filter_designer.hpp  frequency_response.cpp  frequency_response.hpp  main.cpp
source/: CMakeLists.txt  filters.cpp  filters.hpp  math_supplement.cpp  math_supplement.hpp
test/: CMakeLists.txt  tests.cpp
